📦 NEW: Set popup

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,7 +9,15 @@
     "48": "icons/icon_48.png",
     "128": "icons/icon_128.png"
   },
-  "permissions": ["sidePanel", "tabs", "activeTab"],
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icons/icon_16.png",
+      "48": "icons/icon_48.png",
+      "128": "icons/icon_128.png"
+    }
+  },
+  "permissions": ["sidePanel", "tabs", "activeTab", "scripting"],
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
