--- a/package.json
+++ b/package.json
@@ -8,19 +8,26 @@
     "build": "webpack --mode=production --config config/webpack.config.js",
     "pack": "node pack.js",
     "repack": "npm run build && npm run pack",
-    "format": "prettier --write --ignore-unknown \"{config,public,src}/**/*.{html,css,js,ts,json}\""
+    "format": "prettier --write --ignore-unknown \"{config,public,src}/**/*.{html,css,js,ts,json}\"",
+    "test": "jest"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "@types/chrome": "^0.0.181",
+    "@types/jest": "^29.5.12",
     "adm-zip": "^0.5.12",
     "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.11.0",
     "dotenv": "^16.4.5",
     "file-loader": "^6.2.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "mini-css-extract-plugin": "^2.9.0",
     "prettier": "^2.8.8",
+    "ts-jest": "^29.1.2",
     "ts-loader": "^9.2.8",
-    "typescript": "^4.6.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^4.9.5",
     "webpack": "^5.91.0",
     "webpack-cli": "^4.10.0",
     "webpack-merge": "^5.10.0"
