👌 IMPROVE: Refactor using strategy pattern

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,4 +1,8 @@
 # See https://prettier.io/docs/en/ignore.html for more about ignoring files from Prettier.
 
-# Ignore artifacts:
+# Coverage
+coverage
+
+# Artifacts:
 build
+dist
