--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "pack": "node pack.js",
     "repack": "npm run build && npm run pack",
     "format": "prettier --write --ignore-unknown \"{config,public,src}/**/*.{html,css,js,ts,json}\"",
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
