--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "file-loader": "^6.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "lexical": "^0.15.0",
     "mini-css-extract-plugin": "^2.9.0",
     "prettier": "^2.8.8",
     "ts-jest": "^29.1.2",
