--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,32 @@
-# IDE
-.idea
-.vscode
-
-# dependencies
-/node_modules
-
-# production
-/build
-/dist
-
-# coverage
-/coverage
-
-# misc
-.DS_Store
+# Logs
+logs
+*.log
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+build
+dist-ssr
+*.local
+coverage
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Temp files
 temp*
 
-# packed files
-/release
-
-# local env files
+# Local env files
 .env
