--- a/manifest.json
+++ b/manifest.json
@@ -10,18 +10,18 @@
     "128": "icons/icon_128.png"
   },
   "action": {
-    "default_popup": "popup.html",
+    "default_popup": "index.html",
     "default_icon": {
       "16": "icons/icon_16.png",
       "48": "icons/icon_48.png",
       "128": "icons/icon_128.png"
     }
   },
-  "permissions": ["activeTab"],
+  "permissions": ["activeTab", "scripting"],
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["contentScript.js"]
+      "js": ["src/content/content.ts"]
     }
   ]
 }
