--- a/package.json
+++ b/package.json
@@ -3,33 +3,37 @@
   "version": "0.1.0",
   "description": "Type '/ai' let Barrasaur fetch GPT to help you",
   "private": true,
+  "type": "module",
   "scripts": {
-    "watch": "webpack --mode=development --watch --config config/webpack.config.js",
-    "build": "webpack --mode=production --config config/webpack.config.js",
-    "pack": "node pack.js",
-    "repack": "npm run build && npm run pack",
-    "format": "prettier --write --ignore-unknown \"{config,public,src}/**/*.{html,css,js,ts,json}\"",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 && prettier --write --ignore-unknown \"{config,public,src}/**/*.{html,css,js,ts,json}\"",
+    "preview": "vite preview",
     "test": "jest --coverage"
   },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "devDependencies": {
+    "@crxjs/vite-plugin": "^2.0.0-beta.23",
     "@jest/globals": "^29.7.0",
-    "@types/chrome": "^0.0.181",
+    "@types/chrome": "^0.0.268",
     "@types/jest": "^29.5.12",
-    "adm-zip": "^0.5.12",
-    "copy-webpack-plugin": "^10.2.4",
-    "css-loader": "^6.11.0",
-    "dotenv": "^16.4.5",
-    "file-loader": "^6.2.0",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "mini-css-extract-plugin": "^2.9.0",
-    "prettier": "^2.8.8",
-    "ts-jest": "^29.1.2",
-    "ts-loader": "^9.2.8",
-    "ts-node": "^10.9.2",
-    "typescript": "^4.9.5",
-    "webpack": "^5.91.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-merge": "^5.10.0"
+    "prettier": "^3.2.5",
+    "ts-jest": "^29.1.3",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.0"
   }
 }
