--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
       "128": "icons/icon_128.png"
     }
   },
-  "permissions": ["activeTab", "scripting"],
+  "permissions": ["activeTab", "storage"],
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
