--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 && prettier --write --ignore-unknown \"{config,public,src}/**/*.{html,css,js,ts,json}\"",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "jest --testTimeout=20000 --bail",
     "test-cov": "jest --coverage",
-    "test-ci": "jest --ci --forceExit --reporters=default --reporters=jest-junit"
+    "test-ci": "jest --ci --forceExit --reporters=default --reporters=jest-junit",
+    "prepare": "husky"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -34,9 +35,11 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-junit": "^16.0.0",
+    "lint-staged": "^15.2.5",
     "prettier": "^3.2.5",
     "ts-jest": "^29.1.3",
     "ts-node": "^10.9.2",
@@ -48,6 +51,14 @@
     "testEnvironment": "jsdom",
     "setupFilesAfterEnv": [
       "./jest/jest.setup.ts"
+    ]
+  },
+  "lint-staged": {
+    "*.{js,cjs,mjs,ts,tsx}": [
+      "eslint --cache --fix"
+    ],
+    "*": [
+      "prettier --cache --write --ignore-unknown"
     ]
   }
 }
