--- a/manifest.json
+++ b/manifest.json
@@ -17,11 +17,15 @@
       "128": "icons/icon_128.png"
     }
   },
-  "permissions": ["activeTab", "storage"],
+  "permissions": ["activeTab", "storage", "notifications"],
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
       "js": ["src/content/content.ts"]
     }
-  ]
+  ],
+  "background": {
+    "service_worker": "src/background/background.ts",
+    "type": "module"
+  }
 }
