--- a/package.json
+++ b/package.json
@@ -56,6 +56,11 @@
     "testEnvironment": "jsdom",
     "setupFilesAfterEnv": [
       "./jest/jest.setup.ts"
+    ],
+    "coveragePathIgnorePatterns": [
+      "<rootDir>/node_modules/",
+      "<rootDir>/jest/",
+      "<rootDir>/dist/"
     ]
   },
   "lint-staged": {
