--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Barra/AI",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Type '/ai' let Barrasaur fetch GPT to help you",
   "icons": {
     "16": "icons/icon_16.png",
@@ -17,7 +17,7 @@
       "128": "icons/icon_128.png"
     }
   },
-  "permissions": ["activeTab", "storage", "notifications"],
+  "permissions": ["storage", "notifications"],
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
